--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
             </div>
             <div class="results-info score-info">
                 <div class="results-label score-label">Total Score:</div>
-                <div id="score-value" class="results-value score-value">0</div>
+                <div id="score-value" class="results-value score-value"></div>
             </div>
         </div>
     </section>
