--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 <main>
-    <section class="top-section">
+    <section class="header">
         <div class="app-title">Bouldering</div>
         <div class="results">
             <div class="results-info problems-info">
@@ -33,6 +33,9 @@
         </div>
     </section>
     <section id="problems-section" class="problems-section">
+    </section>
+    <section class="footer">
+        <div class="footer-text">by Uri Kalish</div>
     </section>
 </main>
 </body>
