--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 <body>
 <main>
     <section class="header">
-        <div class="app-title">Bouldering</div>
+        <div class="app-title">BoulderScore</div>
         <div class="results">
             <div class="results-info problems-info">
                 <div class="results-label problems-label">Topped Problems:</div>
@@ -35,7 +35,7 @@
     <section id="problems-section" class="problems-section">
     </section>
     <section class="footer">
-        <div class="footer-text">by Uri Kalish</div>
+        <div class="footer-text">BoulderScore by Uri Kalish</div>
     </section>
 </main>
 </body>
